Add 'plain text' as alternate download format for Wiki pages. This is a simple way to allow pages to be restored from earlier versions.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@732 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -176,7 +176,7 @@ form.inline input { margin: 1em }
 .menulist a:hover { background: #ccb; color: #000; }
 
 /* Alternate links */
-#altlinks { text-align: center }
+#altlinks { clear: both; text-align: center }
 #altlinks h3 { font-size: 12px; letter-spacing: normal; margin: 0 }
 #altlinks ul { margin: 0; padding: 0 0 1em }
 #altlinks li {
