Change the way stylesheets dependencies of templates are handled. Now every template specifies a "master" template that it depends on. That master stylesheet in turn @imports any other required stylesheets (for example, changeset.css imports diff.css). This moves the central stylesheet-selection logic from header.cs to the individual templates themselves.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@746 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -325,13 +325,13 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 }
 
 /* Styles for search word highlighting */
-.searchword0 { background: #ff9; }
-.searchword1 { background: #cfc; }
-.searchword2 { background: #cff; }
-.searchword3 { background: #ccf; }
-.searchword4 { background: #fcf; }
+.searchword0 { background: #ff9 }
+.searchword1 { background: #cfc }
+.searchword2 { background: #cff }
+.searchword3 { background: #ccf }
+.searchword4 { background: #fcf }
 
 @media print {
- #header, #footer { display: none }
+ #header, #altlinks, #footer { display: none }
  .nav, form { display: none }
 }
