A wiki toolbar and editing aid to make entering [WikiFormatting wiki text] easier. Closes #433.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@749 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -335,3 +335,16 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
  #header, #altlinks, #footer { display: none }
  .nav, form { display: none }
 }
+#wiki-toolbar {
+ margin: .5em 0 0 2px;
+ padding: 0;
+ border: 1px solid #d7d7d7;
+ border-left: none;
+ }
+#wiki-toolbar, #wiki-toolbar * { display: block; float: left; }
+#wiki-toolbar :link,#wiki-toolbar :link:visited {
+ border: 1px solid #fff;
+ border-left-color: #d7d7d7;
+}
+#wiki-toolbar :link:hover { border-color: #fb2; }
+.wiki-infobox { margin-left: 1em; margin-top: .25em; }
