--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -1,66 +1,64 @@
 @import url(code.css);
 
 /* Browser */
-#browser-chgrev {
+h1 {
+ font: bold 16px arial,verdana,'Bitstream Vera Sans',helvetica, sans-serif;
+ letter-spacing: -0.028em; 
+ margin: 0;
+ padding: 0 0 .5em;
+}
+h1 :link, h1 :visited, h1 .filename { border: none; padding: 0 .2em }
+h1 :link, h1 :visited { color: #b00 }
+h1 .first, h1 .first:hover { color: #998 }
+h1 .sep { color: #666; padding: 0 .1em }
+
+#toolbar {
+ background: #f7f7f7;
+ border-top: 1px solid #ddd;
+ float: left;
+ padding: 2px 0;
+ margin: .1em 0;
+ width: 100%;
+}
+#toolbar ul, #toolbar form { margin: 0 2px }
+#toolbar form {
  float: right;
  padding: 0;
- margin: 0;
  white-space: nowrap;
 }
-#browser-chgrev input, #browser-chgrev submit { 
-  text-align: center; 
-  padding: 0;
-  margin: 0;
+#toolbar input, #toolbar label {
+ font-size: 10px;
+ margin: 0;
+ padding: 0;
+ text-align: center;
+ vertical-align: middle;
 }
-#browser-nav { 
-  clear: both;
-  background: #f7f7f7;
-  float: left;
-  padding: 0 2px;
-  padding-top: 2px;
-  margin: .1em 0;
-  border-top: 1px solid #ddd;
-  width: 100%;
-}
-#browser-nav input, #browser-nav label { padding: 0; font-size: 10px; }
-#browser-pathlinks {
-  padding: 0;
-  padding-bottom: .5em;
-  margin: 0;
-  font-family: arial,verdana,'Bitstream Vera Sans',helvetica, sans-serif;
-  font-size: 16px;
-  letter-spacing:-0.028em; 
- font-weight: bold;
-}
-#browser-pathlinks a, #browser-pathlinks .filename { 
-  border: none;
-  padding: 0 .2em;
- }
-#browser-pathlinks a.first { color: #998 }
-#browser-pathlinks .browser-pathsep { color: #666; }
 
-#revinfo { 
-  border: 1px solid #d7d7d7;
-  background: #f7f7f0;
-  padding: .5em 1em;
-  margin: 1em 0;
+#info {
+ background: #f7f7f0;
+ border: 1px solid #d7d7d7;
+ border-collapse: collapse;
+ border-spacing: 0;
+ clear: left;
+ margin: 1em 0;
+ width: 100%;
 }
-#revinfo h2 { 
- margin: 0 1em;
- padding: 0;
- display: inline;
- float: left;
+#info th {
  font: bold 11px verdana,arial,'Bitstream Vera Sans',helvetica, sans-serif;
+ padding: 2px .5em;
+ white-space: nowrap;
+ vertical-align: top;
 }
-#revchange { 
+#info td.message {
  font: normal 11px verdana,arial,'Bitstream Vera Sans',helvetica, sans-serif;
- padding: 0;
- margin: 0 2em;
- float: left;
- display: inline;
+ padding: 2px .5em;
+ vertical-align: top;
+ width: 100%;
 }
-#revchange ul { padding: 0; margin: 0 2em; }
-#revchange p { margin: 0; padding: 0; }
+#info .message ul { padding: 0; margin: 0 2em }
+#info .message p { margin: 0; padding: 0 }
+
+#content { clear: both }
 
 /* Styles for the directory entries table
    (extends the styles for "table.listing") */
