* Eliminate some of the excessive white-space in diff tables  * Make line numbers non-bold
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@760 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -106,6 +106,7 @@
  border: 1px solid #d7d7d7;
  }
 .diff table tbody th {
+ font-weight: normal;
  padding: 0 .5em;
  text-align: right;
  vertical-align: top;
