--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -1,38 +1,15 @@
 @import url(diff.css);
 
 /* Changeset overview */
-#overview tr.files ul { margin: 0; padding: 0 }
-#overview tr.files li { list-style-type: none }
-#overview tr.files li .comment { display: none }
-#overview tr.files li div {
+#overview dd.files ul { margin: 0; padding: 0 }
+#overview dd.files li { list-style-type: none }
+#overview dd.files li .comment { display: none }
+#overview dd.files li div {
  border: 1px solid #999;
  float: left;
- margin: .1em .5em .1em 0;
+ margin: .2em .5em 0 0;
  overflow: hidden;
  width: .8em; height: .8em;
 }
-#overview tr.message td,
-#overview tr.message th { padding-top: 1em }
-#overview tr.message td :first-child { margin-top: 0 }
-
-/* Diff preferences */
-#prefs {
- background: #f7f7f0;
- border: 1px outset #998;
- float: right;
- font-size: 9px;
- padding: .8em;
- margin: -12em 1em 1em 2em;
- width: 28em;
-}
-#prefs input, #prefs select { font-size: 9px; vertical-align: middle }
-#prefs fieldset { border: none; margin: 0 .5em .5em; padding: .5em 1em 0 }
-#prefs fieldset legend {
- background: transparent;
- display: block;
- color: #333;
- font-size: 10px;
- margin: 1em 0 0 -1.5em;
-}
-#prefs fieldset .field input { margin: 0; padding: 0 }
-#prefs .buttons { margin-top: -1.5em; text-align: right }
+#overview dt.message { margin-top: 1em }
+#overview dd.message :first-child { margin-top: 0 }
