Wrap long lines in inline diff
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@767 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -143,7 +143,7 @@
 
 /* Styles for the inline diff */
 .diff table.inline del, .diff table.inline ins, .diff table.inline span {
- height: 1.5em;
+ min-height: 1.5em;
 }
 .diff table.inline del {
  background: #fdd;
