(Another) refactoring of the diff markup so that line-wrapping works across browsers
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@771 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -1,6 +1,7 @@
 @import url(diff.css);
 
 /* Changeset overview */
+#overview dt.files { margin-top: 1em }
 #overview dd.files ul { margin: 0; padding: 0 }
 #overview dd.files li { list-style-type: none }
 #overview dd.files li .comment { display: none }
