--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -126,6 +126,7 @@
 .diff table tbody td {
  background: #fff;
  font: normal 11px monospace;
+ overflow: hidden;
  padding: 1px 2px;
  vertical-align: top;
 }
