Fix some minor style glitches
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@786 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -216,7 +216,7 @@ form.inline input { margin: 1em }
  margin: 1em;
  text-align: right
 }
-#help :link, #help :visited { color: #b44; cursor: help }
+#help :link, #help :visited { cursor: help }
 #help hr { display: none }
 
 /* Wiki */
