--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -18,7 +18,7 @@
  font-size: 105%;
 }
 #main.timeline dl { line-height: 130%; margin-left: 1em }
-#main.timeline dt { background: 3px 50% no-repeat; padding: 1px }
+#main.timeline dt { background: 4px 50% no-repeat; padding: 1px }
 #main.timeline dt em {
  border-bottom: 1px dotted #bbb;
  color: #b00;
@@ -27,7 +27,7 @@
 }
 #main.timeline dt .time { color: #777 }
 #main.timeline dt :link, #main.timeline dt :visited {
- background: #fff 3px 50% no-repeat;
+ background: transparent 3px 50% no-repeat;
  display: block;
  border: none;
  color: #000;
